tests/misc_tests/misc_ui_tests/polymatch_syntax-err.stderr
error: expected arguments to be `matched expression; match arms`
 --> tests/misc_tests/misc_ui_tests/polymatch_syntax-err.rs:2:5
  |
2 | /     typewit::polymatch! {100
3 | |         200 | 300 => 400
4 | |     };
  | |_____^
  |
  = note: this error originates in the macro `typewit::polymatch` (in Nightly builds, run with -Z macro-backtrace for more info)

error: no rules expected the token `500`
 --> tests/misc_tests/misc_ui_tests/polymatch_syntax-err.rs:7:9
  |
6 |         200 | 300 => 400
  |                         - help: missing comma here
7 |         500 | 600 => 400
  |         ^^^ no rules expected this token in macro call
  |
  = note: while trying to match sequence start
